@@ -1,4 +1,4 @@
-Copyright (c) 2012, Menno Smits
+Copyright (c) 2013, Menno Smits
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
