@@ -33,7 +33,7 @@ master_doc = 'index'
 
 # General information about the project.
 project = u'IMAPClient'
-copyright = u'2012, Menno Smits'
+copyright = u'2013, Menno Smits'
 
 # The version info for the project you're documenting, acts as replacement for
 # |version| and |release|, also used in various other places throughout the
