@@ -1,8 +1,9 @@
 #!/usr/bin/python
 
-# Copyright (c) 2012, Menno Smits
+# Copyright (c) 2013, Menno Smits
 # Released subject to the New BSD License
 # Please see http://en.wikipedia.org/wiki/BSD_licenses
 
+from imapclient import IMAPClient
 from imapclient.interact import main
 main()
